<resources>
    <string name="app_name">Test</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="saved">Saved</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="login">LogIn</string>
    <string name="type_your_review">Type your review...</string>
    <string name="register">Register</string>
    <string name="error_field_is_ampty">fill the field</string>
    <string name="error_too_short_word">too short word</string>
    <string name="error_long_short_word">too long word</string>
    <string name="error_invalid_input">invalid input</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_passwords_is_not_match">passwords do not match</string>
    <string name="add_review">Add review</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full name</string>
    <string name="nothing_to_show">Nothing to show :(</string>
    <string name="no_internet_connection">No Internet connection!</string>
</resources>
