<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
            android:id="@+id/user_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera_icon_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.3" />

    <ImageView
            android:id="@+id/icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toTopOf="@+id/profile_username"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
             />

    <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/primary_text_size"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/user_image"
            tools:text="Shimbabumba" />
    <EditText
            android:id="@+id/edit_profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:textSize="@dimen/primary_text_size"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/user_image"
            tools:text="Shimbabumba" />

    <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintEnd_toEndOf="@+id/profile_username"
            app:layout_constraintStart_toStartOf="@+id/profile_username"
            app:layout_constraintTop_toBottomOf="@+id/profile_username"
            tools:text="John Smith" />
    <TextView
            android:id="@+id/edit_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minWidth="50dp"
            android:textSize="@dimen/secondary_text_size"
            app:layout_constraintEnd_toEndOf="@+id/edit_profile_username"
            app:layout_constraintStart_toStartOf="@+id/edit_profile_username"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_username"
            tools:text="John Smith" />

    <androidx.constraintlayout.widget.Group

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_edit"
        app:constraint_referenced_ids="icon_edit,edit_profile_name,edit_profile_username,button_save"
        />
    <androidx.constraintlayout.widget.Group android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_profile"
            app:constraint_referenced_ids="profile_name,profile_username,button_edit,button_log_out"
            />

    <TextView
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_name" />

    <TextView
            android:id="@+id/button_log_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_button_accent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="@+id/user_image"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/button_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>